--- a/fNbt/fNbt.csproj
+++ b/fNbt/fNbt.csproj
@@ -1,9 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
 		<OutputType>Library</OutputType>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<LangVersion>7.3</LangVersion>
+		
+		<PackageId>MineSharp.fNbt</PackageId>
+		<Version>1.0.0</Version>
+		<Title>MineSharp.fNbt</Title>
+		<Authors>Erik Davidson (2010-2011); Matvei Stefarov (2012+); Paul Sütterlin (2024)</Authors>
+		<PackageLicenseUrl>https://github.com/psu-de/MineSharp.fNbt/blob/master/docs/LICENSE</PackageLicenseUrl>
+		<PackageProjectUrl>https://github.com/psu-de/MineSharp.fNbt</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/psu-de/MineSharp.fNbt</RepositoryUrl>
+		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+		<Description>MineSharp fNbt version supporting anonymous nbt files.</Description>
+		<Copyright>Copyright 2012-2018 Matvei Stefarov</Copyright>
+		<PackageTags>nbt serialization</PackageTags>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
 		<OutputPath>..\bin\Debug\</OutputPath>
